force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Package_File__c/FD_Package_File__c.object-meta.xml
<CustomObject>
    <label>Package File</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>