force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Package_File__c/fields/FD_Active__c.field-meta.xml
<CustomField>
    <fullName>FD_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>