force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Package_File__c/fields/FD_File_Type__c.field-meta.xml
<CustomField>
    <fullName>FD_File_Type__c</fullName>
    <label>File Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Word Doc (*.docx)</fullName>
            </value>
            <value>
                <fullName>XPS Doc (*.xps)</fullName>
            </value>
            <value>
                <fullName>PDF (*.pdf)</fullName>
            </value>
            <value>
                <fullName>Plain Test (*.txt)</fullName>
            </value>
            <value>
                <fullName>Web Page (*.html)</fullName>
            </value>
            <value>
                <fullName>RAR (*.rar)</fullName>
            </value>
            <value>
                <fullName>Database (*.db)</fullName>
            </value>
            <value>
                <fullName>SQL Database (*.sql)</fullName>
            </value>
            <value>
                <fullName>XML (*.xml)</fullName>
            </value>
            <value>
                <fullName>Image (*.png/*.jpeg)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>