force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Package_File__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FD_Active__c</columns>
    <columns>FD_File_Type__c</columns>
    <columns>FD_Package__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>